# Custom_Launcher

./: .icon_hashes.json  CMakeLists.txt  convert_icons.py  partitions.csv  platformio.ini  sdkconfig.defaults
bootloader_components/boot_gpio_hook/: CMakeLists.txt  boot_gpio_hook.c
icons/: README.md
include/: LGFX_Config.h
src/: CMakeLists.txt  main.cpp
src/assets/icons/: aicode.h  ota.h  settings.h  torch.h
src/config/: sys_config.h  web_ui.h
src/drivers/: led_driver.c  led_driver.h
src/managers/: input_mgr.c  input_mgr.h
src/services/: idle_mgr.c  idle_mgr.h  ota_service.c  ota_service.h  web_server.c  web_server.h  wifi_ap.c  wifi_ap.h  wifi_mgr.c  wifi_mgr.h
src/system/: boot_ctrl.c  boot_ctrl.h  sys_mgr.c  sys_mgr.h
src/ui/: theme_mgr.cpp  theme_mgr.h  ui_task.cpp  ui_task.h
src/ui/apps/: App_AICode.cpp  App_AICode.h  App_Grid.cpp  App_Grid.h  App_OTA.cpp  App_OTA.h  App_Settings.cpp  App_Settings.h  App_Torch.cpp  App_Torch.h  IApp.h
